--- a/src/tpls/footer.html
+++ b/src/tpls/footer.html
@@ -1,1 +1,7 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <div class="footer__container container">
+    <a href="#" class="footer__link">Пользовательское соглашение</a>
+
+    @@include('./socials.html',{ className: 'footter__socials', })
+  </div>
+</footer>
