--- a/src/tpls/socials.html
+++ b/src/tpls/socials.html
@@ -1,12 +1,12 @@
 <div class="socials @@className">
-  <a href="#" target="_blank" rel="noopener noreferrer" class="socials__link">
+  <a href="#ig" target="_blank" rel="noopener noreferrer" class="socials__link">
     <svg class="socials__icon">
-      <use xlink:href="./img/icons/@@instagram.svg#@@instagram"></use>
+      <use xlink:href="./img/icons/instagram.svg#instagram"></use>
     </svg>
   </a>
-  <a href="#" target="_blank" rel="noopener noreferrer" class="socials__link">
+  <a href="#vk" target="_blank" rel="noopener noreferrer" class="socials__link">
     <svg class="socials__icon">
-      <use xlink:href="./img/icons/@@facebook.svg#@@facebook"></use>
+      <use xlink:href="./img/icons/vk.svg#vk"></use>
     </svg>
   </a>
 </div>
