--- a/src/main.html
+++ b/src/main.html
@@ -22,7 +22,7 @@
               <a
                 href="https://hrusteam.by"
                 target="_blank"
-                class="button button hero__button"
+                class="button hero__button"
                 >наши другие вкусы</a
               >
             </div>
@@ -54,10 +54,11 @@
                 Турнир по CS:GO
               </h2>
               <p class="hero-offer__desc">
-                Играй и заряжайся на перерывах с ХрусTeam! В самой сложной катке
-                иногда помочь может только "супербустер"... Знакомо, правда?
-                Здесь не обойтисьбез небольшого перерыва для прилива сил, мощи и
-                максимальной энергии.
+                Играй и заряжайся на перерывах с ХрусTeam! <br />
+                В самой сложной катке иногда помочь может только
+                "супербустер"... Знакомо, правда? Здесь не обойтись
+                без&nbsp;небольшого перерыва для прилива сил, мощи
+                и&nbsp;максимальной энергии.
               </p>
               <p class="hero-offer__desc">
                 #ПерерывсХрусTeam выведет тебя на новый уровень! Подкрепись
@@ -83,9 +84,6 @@
               </div>
             </div>
           </div>
-        </section>
-        <section class="fund">
-          <div class="container fund__container"></div>
         </section>
         <section class="fund">
           <div class="container fund__container">
@@ -159,24 +157,29 @@
               </article>
             </div>
           </div>
-        </section>
-        <section class="stream">
-          <div class="container stream__container">
-            <h2 class="section-title stream__title">Смотри онлайн</h2>
-            <div class="stream__channels">
-              <button class="stream-channel">
-                <svg class="stream-channel__icon">
-                  <use xlink:href="./img/common/twitch.svg#twitch" />
-                </svg>
-              </button>
-              <button class="stream-channel">
-                <svg class="stream-channel__icon">
-                  <use xlink:href="./img/common/vk.svg#vk" />
-                </svg>
-              </button>
-            </div>
-            <div class="stream__video">
-              <iframe src="" frameborder="0"></iframe>
+
+          <div class="stream">
+            <div class="container stream__container">
+              <h2 class="section-title stream__title">Смотри онлайн</h2>
+              <div class="stream__channels">
+                <div class="stream-channel">
+                  <button class="stream-channel__icon">
+                    <svg>
+                      <use xlink:href="./img/common/twitch.svg#twitch" />
+                    </svg>
+                  </button>
+                </div>
+                <div class="stream-channel stream-channel--vk">
+                  <button class="stream-channel__icon">
+                    <svg>
+                      <use xlink:href="./img/common/vk.svg#vk" />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+              <div class="stream__video">
+                <iframe src="http://localhost:3000/" frameborder="0"></iframe>
+              </div>
             </div>
           </div>
         </section>
@@ -314,7 +317,7 @@
                       спецназовцев и террористов;
                     </p>
 
-                    <h5>Map pool:</h5>
+                    <p>Map pool:</p>
                     <ul>
                       <li>Dust2 (de_dust2)</li>
                       <li>Inferno (de_inferno)</li>
@@ -325,7 +328,7 @@
                       <li>Vertigo (de_vertigo)</li>
                     </ul>
 
-                    <h5>Настройки сервера:</h5>
+                    <p>Настройки сервера:</p>
                     <ol>
                       <li>Rounds: MR15</li>
                       <li>Round-time: 1:55 minutes</li>
