--- a/src/tpls/footer.html
+++ b/src/tpls/footer.html
@@ -2,6 +2,11 @@
   <div class="footer__container container">
     <a href="#" class="footer__link">Пользовательское соглашение</a>
 
-    @@include('./socials.html',{ className: 'footter__socials', })
+    @@include('./socials.html',{ className: 'footer__socials', })
+
+    <p class="footer__copy">
+      © 2021 ИООО «ПепсиКо Продактс». <br />
+      Все прaвa зaщищены.
+    </p>
   </div>
 </footer>
