--- a/src/tpls/header.html
+++ b/src/tpls/header.html
@@ -92,25 +92,25 @@
         <img class="logo__img" src="./img/common/header-logo.png" alt="" />
       </picture>
     </a>
-    <nav class="nav hero__nav">
-      <ul class="hero__nav-links">
-        <li class="hero__nav-item">
-          <a href="#fund" class="hero__nav-link">призы</a>
+    <nav class="nav header__nav">
+      <ul class="header__nav-links">
+        <li class="header__nav-item">
+          <a href="#fund" class="header__nav-link">призы</a>
         </li>
-        <li class="hero__nav-item">
-          <a href="#stream" class="hero__nav-link">трансляция</a>
+        <li class="header__nav-item">
+          <a href="#stream" class="header__nav-link">трансляция</a>
         </li>
-        <li class="hero__nav-item">
-          <a href="#teams" class="hero__nav-link">команды</a>
+        <li class="header__nav-item">
+          <a href="#teams" class="header__nav-link">команды</a>
         </li>
-        <li class="hero__nav-item">
-          <a href="#rules" class="hero__nav-link">правила</a>
+        <li class="header__nav-item">
+          <a href="#rules" class="header__nav-link">правила</a>
         </li>
-        <li class="hero__nav-item">
-          <a href="#faq" class="hero__nav-link">f.a.q</a>
+        <li class="header__nav-item">
+          <a href="#faq" class="header__nav-link">f.a.q</a>
         </li>
-        <li class="hero__nav-item">
-          <a href="#socials" class="hero__nav-link">соц. сети</a>
+        <li class="header__nav-item">
+          <a href="#socials" class="header__nav-link">соц. сети</a>
         </li>
       </ul>
     </nav>
