--- a/src/main.html
+++ b/src/main.html
@@ -61,8 +61,9 @@
                 и&nbsp;максимальной энергии.
               </p>
               <p class="hero-offer__desc">
-                #ПерерывсХрусTeam выведет тебя на новый уровень! Подкрепись
-                сухариками с яркими вкусами и возвращайся за победой в турнире!
+                #ПерерывсХрусTeam выведет тебя на новый уровень! <br />
+                Подкрепись сухариками с яркими вкусами и возвращайся
+                за&nbsp;победой в турнире!
               </p>
               <div class="hero-offer__logos">
                 <picture class="hero-offer__logo-pic">
