--- a/src/tpls/header.html
+++ b/src/tpls/header.html
@@ -101,7 +101,7 @@
           <a href="#stream" class="header__nav-link">трансляция</a>
         </li>
         <li class="header__nav-item">
-          <a href="#teams" class="header__nav-link">команды</a>
+          <a href="#teams" class="header__nav-link">хэдлайнеры</a>
         </li>
         <li class="header__nav-item">
           <a href="#rules" class="header__nav-link">правила</a>
