--- a/src/tpls/header.html
+++ b/src/tpls/header.html
@@ -114,5 +114,10 @@
         </li>
       </ul>
     </nav>
+    <button class="header__burger burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
   </div>
 </header>
