--- a/src/tpls/footer.html
+++ b/src/tpls/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__container container">
     <a href="#" class="footer__link">Пользовательское соглашение</a>
 
@@ -10,3 +10,5 @@
     </p>
   </div>
 </footer>
+
+@@include('./modals.html')
