--- a/src/tpls/header.html
+++ b/src/tpls/header.html
@@ -86,7 +86,7 @@
 <![endif]-->
 <header class="header">
   <div class="header__container container">
-    <a href="#" class="logo header__logo">
+    <a href="#hero" class="logo header__logo">
       <picture class="logo__pic">
         <!-- <source srcset="./img/common/header-logo.webp" type="image/webp" /> -->
         <img class="logo__img" src="./img/common/header-logo.png" alt="" />
@@ -110,7 +110,7 @@
           <a href="#faq" class="header__nav-link">f.a.q</a>
         </li>
         <li class="header__nav-item">
-          <a href="#socials" class="header__nav-link">соц. сети</a>
+          <a href="#footer" class="header__nav-link">соц. сети</a>
         </li>
       </ul>
     </nav>
