--- a/src/tpls/socials.html
+++ b/src/tpls/socials.html
@@ -1,10 +1,21 @@
 <div class="socials @@className">
-  <a href="#ig" target="_blank" rel="noopener noreferrer" class="socials__link">
+  <a
+    href="https://www.instagram.com/hrusteam.by/
+"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="socials__link"
+  >
     <svg class="socials__icon">
       <use xlink:href="./img/icons/instagram.svg#instagram"></use>
     </svg>
   </a>
-  <a href="#vk" target="_blank" rel="noopener noreferrer" class="socials__link">
+  <a
+    href="https://vk.com/hrusteambelarus"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="socials__link"
+  >
     <svg class="socials__icon">
       <use xlink:href="./img/icons/vk.svg#vk"></use>
     </svg>
