--- a/src/main.html
+++ b/src/main.html
@@ -16,7 +16,7 @@
           <div class="container hero__container">
             <div class="hero__figure">
               <picture class="hero__pic">
-                <!-- <source srcset="./img/hero/hand.webp" type="image/webp" /> -->
+                <source srcset="./img/hero/hand.webp" type="image/webp" />
                 <img class="hero__img" src="./img/hero/hand.png" alt="" />
               </picture>
               <a
@@ -29,10 +29,10 @@
             <div class="hero-offer">
               <div class="hero-offer__date">
                 <picture class="hero-offer__date-pic">
-                  <!-- <source
+                  <source
                     srcset="./img/hero/hero-date.webp"
                     type="image/webp"
-                  /> -->
+                  />
                   <img
                     class="hero-offer__date-img"
                     src="./img/hero/hero-date.png"
@@ -42,7 +42,7 @@
               </div>
               <div class="hero-offer__title">
                 <picture class="hero-offer__title-pic">
-                  <!-- <source srcset="./img/hero/9000.webp" type="image/webp" /> -->
+                  <source srcset="./img/hero/9000.webp" type="image/webp" />
                   <img
                     class="hero-offer__title-img"
                     src="./img/hero/9000.png"
@@ -67,7 +67,7 @@
               </p>
               <div class="hero-offer__logos">
                 <picture class="hero-offer__logo-pic">
-                  <!-- <source srcset="./img/hero/.webp" type="image/webp" /> -->
+                  <source srcset="./img/hero/csgo.webp" type="image/webp" />
                   <img
                     class="hero-offer__logo-img"
                     src="./img/hero/csgo.png"
@@ -75,7 +75,10 @@
                   />
                 </picture>
                 <picture class="hero-offer__logo-pic">
-                  <!-- <source srcset="./img/hero/.webp" type="image/webp" /> -->
+                  <source
+                    srcset="./img/hero/hero-logo.webp"
+                    type="image/webp"
+                  />
                   <img
                     class="hero-offer__logo-img"
                     src="./img/hero/hero-logo.png"
@@ -91,22 +94,18 @@
             <h2 class="section-title fund__title">Призовой фонд</h2>
             <div class="fund__cup">
               <picture class="fund__pic">
-                <!-- <source data-srcset="./img/fund/cup.webp," type="image/webp" /> -->
-                <img
-                  class="fund__img lazy"
-                  data-src="./img/fund/cup.png"
-                  alt=""
-                />
+                <source srcset="./img/fund/cup.webp" type="image/webp" />
+                <img class="fund__img lazy" src="./img/fund/cup.png" alt="" />
               </picture>
             </div>
             <div class="fund__cards">
               <article class="fund-card">
                 <h3 class="fund-card__heading">1 место</h3>
                 <picture class="fund-card__pic">
-                  <!-- <source
+                  <source
                     data-srcset="./img/fund/5000.webp,"
                     type="image/webp"
-                  /> -->
+                  />
                   <img
                     class="fund-card__img lazy"
                     data-src="./img/fund/5000.png"
@@ -117,10 +116,10 @@
               <article class="fund-card">
                 <h3 class="fund-card__heading">3 место</h3>
                 <picture class="fund-card__pic">
-                  <!-- <source
+                  <source
                     data-srcset="./img/fund/1000.webp,"
                     type="image/webp"
-                  /> -->
+                  />
                   <img
                     class="fund-card__img lazy"
                     data-src="./img/fund/1000.png"
@@ -131,10 +130,10 @@
               <article class="fund-card">
                 <h3 class="fund-card__heading">2 место</h3>
                 <picture class="fund-card__pic">
-                  <!-- <source
+                  <source
                     data-srcset="./img/fund/2500.webp,"
                     type="image/webp"
-                  /> -->
+                  />
                   <img
                     class="fund-card__img lazy"
                     data-src="./img/fund/2500.png"
@@ -145,10 +144,10 @@
               <article class="fund-card">
                 <h3 class="fund-card__heading">4 место</h3>
                 <picture class="fund-card__pic">
-                  <!-- <source
+                  <source
                     data-srcset="./img/fund/500.webp,"
                     type="image/webp"
-                  /> -->
+                  />
                   <img
                     class="fund-card__img lazy"
                     data-src="./img/fund/500.png"
@@ -163,9 +162,7 @@
             <div class="container stream__container">
               <h2 class="section-title stream__title">Смотри онлайн</h2>
               <div class="stream__channels">
-                <div
-                  class="stream-channel stream-channel--twitch stream-channel--active"
-                >
+                <div class="stream-channel stream-channel--twitch">
                   <button class="stream-channel__icon" data-stream="twitch">
                     <svg>
                       <use xlink:href="./img/common/twitch.svg#twitch" />
@@ -209,13 +206,10 @@
             </h2>
             <article class="about-card">
               <picture class="about-card__pic">
-                <!-- <source
-                  data-srcset="./img/about/keyboard.webp,"
-                  type="image/webp"
-                /> -->
+                <source srcset="./img/about/keyboard.webp" type="image/webp" />
                 <img
                   class="about-card__img lazy"
-                  data-src="./img/about/keyboard.png"
+                  src="./img/about/keyboard.png"
                   alt=""
                 />
               </picture>
@@ -235,7 +229,10 @@
             <div class="teams__gallery">
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/ninepandas.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/ninepandas.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/ninepandas.png"
@@ -245,7 +242,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/fg.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/fg.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/fg.png"
@@ -255,7 +255,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/insilio.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/insilio.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/insilio.png"
@@ -265,7 +268,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/vp.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/vp.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/vp.png"
@@ -275,7 +281,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/tag.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/tag.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/tag.png"
@@ -285,7 +294,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/163on.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/163on.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/163on.png"
@@ -295,7 +307,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/gj.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/gj.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/gj.png"
@@ -305,7 +320,10 @@
               </a>
               <a href="#" class="teams-card">
                 <picture class="teams-card__pic">
-                  <!-- <source data-srcset="./img/teams/nemiga.webp," type="image/webp" /> -->
+                  <source
+                    data-srcset="./img/teams/nemiga.webp,"
+                    type="image/webp"
+                  />
                   <img
                     class="teams-card__img lazy"
                     data-src="./img/teams/nemiga.png"
