--- a/src/main.html
+++ b/src/main.html
@@ -433,7 +433,7 @@
               </div>
               <div class="faq-card bayan">
                 <div class="faq-card__top">
-                  <h3 class="faq-card__question">ОБЯЗАННОСТИ ИГРОКОВ:</h3>
+                  <h3 class="faq-card__question">ОБЯЗАННОСТИ ИГРОКОВ?</h3>
                 </div>
                 <div class="faq-card__bottom">
                   <div class="faq-card__answer">
@@ -481,7 +481,7 @@
               <div class="faq-card bayan">
                 <div class="faq-card__top">
                   <h3 class="faq-card__question">
-                    Как решаются спорные вопросы:
+                    Как решаются спорные вопросы?
                   </h3>
                 </div>
                 <div class="faq-card__bottom">
@@ -514,7 +514,6 @@
                 </div>
                 <div class="faq-card__bottom">
                   <div class="faq-card__answer">
-                    <h4 class="faq-card__answer-heading">Ответ:</h4>
                     <ul>
                       <li>
                         По требованию организаторов участники обязаны
